--- a/resume.html
+++ b/resume.html
@@ -57,53 +57,57 @@
     <div class="container">
         <div class="body-content-custom">
 
-            <div id="technical-resume-custom" style="height: 660px; width: 510px; margin: auto;"></div>
-            <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
-            <script type="text/javascript">
-                document.addEventListener("adobe_dc_view_sdk.ready", function () {
-                    var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "technical-resume-custom" });
-                    adobeDCView.previewFile(
-                        {
-                            content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Technical).pdf" } },
-                            metaData: { fileName: "Pete Smith Résumé (Technical)", hasReadOnlyAccess: true }
-                        },
-                        {
-                            embedMode: "SIZED_CONTAINER",
-                            showFullScreen: true,
-                            showDownloadPDF: true,
-                            showPrintPDF: true
-                        }
+            <div class="card mx-auto">
+                <div id="technical-resume-custom" style="height: 660px; margin: auto;"></div>
+                <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+                <script type="text/javascript">
+                    document.addEventListener("adobe_dc_view_sdk.ready", function () {
+                        var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "technical-resume-custom" });
+                        adobeDCView.previewFile(
+                            {
+                                content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Technical).pdf" } },
+                                metaData: { fileName: "Pete Smith Résumé (Technical)", hasReadOnlyAccess: true }
+                            },
+                            {
+                                embedMode: "SIZED_CONTAINER",
+                                showFullScreen: true,
+                                showDownloadPDF: true,
+                                showPrintPDF: true
+                            }
 
-                    );
-                });
-            </script>
-            <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Technical Résumé Direct
-                    Download</a></p>
+                        );
+                    });
+                </script>
+                <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Technical Résumé
+                        Direct Download</a></p>
+            </div>
 
             <hr />
 
-            <div id="humanities-resume-custom" style="height: 660px; width: 510px; margin: auto;"></div>
-            <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
-            <script type="text/javascript">
-                document.addEventListener("adobe_dc_view_sdk.ready", function () {
-                    var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "humanities-resume-custom" });
-                    adobeDCView.previewFile(
-                        {
-                            content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Humanities).pdf" } },
-                            metaData: { fileName: "Pete Smith Résumé (Humanities)", hasReadOnlyAccess: true }
-                        },
-                        {
-                            embedMode: "SIZED_CONTAINER",
-                            showFullScreen: true,
-                            showDownloadPDF: true,
-                            showPrintPDF: true
-                        }
+            <div class="card mx-auto">
+                <div id="humanities-resume-custom" style="height: 660px; margin: auto;"></div>
+                <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+                <script type="text/javascript">
+                    document.addEventListener("adobe_dc_view_sdk.ready", function () {
+                        var adobeDCView = new AdobeDC.View({ clientId: "b32827ef44d9406395e169bf3feca8c4", divId: "humanities-resume-custom" });
+                        adobeDCView.previewFile(
+                            {
+                                content: { location: { url: "/assets/resumes/Pete_Smith_Resume_(Humanities).pdf" } },
+                                metaData: { fileName: "Pete Smith Résumé (Humanities)", hasReadOnlyAccess: true }
+                            },
+                            {
+                                embedMode: "SIZED_CONTAINER",
+                                showFullScreen: true,
+                                showDownloadPDF: true,
+                                showPrintPDF: true
+                            }
 
-                    );
-                });
-            </script>
-            <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Humanities
-                    Résumé Direct Download</a></p>
+                        );
+                    });
+                </script>
+                <p class="text-center"><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Humanities Résumé
+                        Direct Download</a></p>
+            </div>
 
             <hr />
             <footer class="footer text-muted text-center">
