--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <!-- custom stylesheet across subpages -->
     <link rel="stylesheet" href="/assets/css/styles.css">
 
-    <!-- random image script (needs jquery) -->
-    <script defer src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+    <!-- random image script -->
     <script defer src="/assets/js/random-image.js"></script>
 </head>
 
@@ -29,7 +28,6 @@
     <nav class="navbar navbar-expand-md navbar-light bg-light py-2 mb-5 shadow fixed-top">
         <div class="container">
             <a class="navbar-brand navbar-brand-custom" href="#">
-                <!-- NEED MORE SIZES FOR LOGO -->
                 <img src="/assets/images/site-logo-1080.jpeg" width="50" height="50"
                     class="d-inline-block align-center nav-logo-custom" alt="Site logo">Pete Smith
             </a>
@@ -62,22 +60,21 @@
     <div class="container">
 
         <div class="body-content-custom">
-            <h1 class="intro-custom">This site is under active development! Thank you for your patience</h1>
-
-            <hr />
 
             <h1 class="intro-custom">Hi! I'm Pete Smith</h1>
 
+            <hr />
 
             <div class="row">
-                <div class="col-md">
-                    <img id="random-image" style="object-fit: cover; height: 500px; width: 500px;">
+                <div class="col-md" id="img-parent">
+                    <img id="random-image" style="object-fit: cover; height: 400px; width: 400px;">
                 </div>
                 <div class="col-md">
                     <p class="quick-facts-custom">
                         Some quick facts about me:
 
                     <ul class="quick-facts-custom" title="Some quick facts about me:">
+                        <li>I'm an aspiring software engineer based in the Washington, D.C. Area</li>
                         <li>I'm a senior at the University of Maryland, College Park</li>
                         <li>I'm pursuing two degrees!
                             <ul>
